<resources>
    <string name="app_name">comp3074_assignment1</string>
    <string name="enter_hours_worked">Enter hours worked</string>
    <string name="enter_hourly_rate">Enter hourly rate</string>
    <string name="calculate_pay">Calculate Pay</string>
    <string name="pay">Pay: $0.00</string>
    <string name="overtime_pay">Overtime Pay: $0.00</string>
    <string name="total_pay">Total Pay: $0.00</string>
    <string name="tax">Tax: $0.00</string>
    <string name="view_payment_details">View Payment Details</string>
    <string name="payment_logger">Payment Logger</string>
    <string name="menu_details">View Payment Details</string>
    <string name="empty_payments">No payments yet. Go back and calculate one.</string>
    <string name="label_pay">Pay: %1$s</string>
    <string name="label_overtime">Overtime: %1$s</string>
    <string name="label_total">Total: %1$s</string>
    <string name="label_tax">Tax: %1$s</string>
</resources>